spruced up formulas

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body id="body">
      <h1></h1>
-   <canvas></canvas>
+   <canvas id = "canvas"></canvas>
    <script src="anima.js"></script>
  </body>
 </html>
@@ -14,15 +14,3 @@
 
 
 
-<!-- <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="style.css">
-        <title>Document</title>
-    </head>
-    <body id= "passiveTarget">
-        <input type="text" value="" id="input">
-        <button type="button" value= "" id="click">
-        <div id= "word" class="word"></div>
-    </body> -->
