--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
  <head>
   <meta charset="utf-8"/>
-  <link rel ="stylesheet" href="style.css">
+  <link rel ="stylesheet" href="./style.css">
  </head>
  <body id="body">
      <h1></h1>
    <canvas id = "canvas"></canvas>
-   <script src="anima.js"></script>
+   <script src="./anima.js"></script>
  </body>
 </html>
 
